@@ -1,7 +1,6 @@
 pixmaps_DATA = upnp-device.png 		\
 	       upnp-service.png 	\
 	       upnp-state-variable.png  \
-	       upnp-state-variables.png \
 	       network-light-on.png 	\
 	       network-light-off.png 	\
 	       network-light.png
