@@ -30,12 +30,12 @@ typedef enum
         ICON_FIRST = -1,
         ICON_DEVICE,
         ICON_SERVICE,
-        ICON_VARIABLES,
         ICON_VARIABLE,
         ICON_ACTION_ARG,
         ICON_MISSING,
         ICON_NETWORK,
         ICON_ACTION,
+        ICON_VARIABLES,
         ICON_LAST
 } IconID;
 
